stable card list

--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -4,8 +4,12 @@
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :english_name %><br />
+    <%= f.text_field :english_name %>
+  </p>
+  <p>
+    <%= f.label :spanish_name %><br />
+    <%= f.text_field :spanish_name %>
   </p>
   <p>
     <%= f.submit "Create" %>
