--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,8 +1,9 @@
 <p>
   <b>Name:</b>
-  <%=h @card.name %>
+  <%=h @card.english_name %> /   <%=h @card.spanish_name %>
 </p>
 
 
 <%= link_to 'Edit', edit_card_path(@card) %> |
-<%= link_to 'Back', cards_path %>
+<%= link_to 'Back', cards_path %> |
+<%= link_to 'Main', root_path %>
