--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -4,8 +4,8 @@
   <%= f.error_messages %>
 
   <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :spanish_name %><br />
+    <%= f.text_field :spanish_name %>
   </p>
   <p>
     <%= f.submit "Update" %>
