--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -7,7 +7,8 @@
 
 <% for card in @cards %>
   <tr>
-    <td><%=h card.name %></td>
+    <td><%=h card.english_name %></td>
+    <td><%=h card.spanish_name %></td>
     <td><%= link_to 'Show', card %></td>
     <td><%= link_to 'Edit', edit_card_path(card) %></td>
     <td><%= link_to 'Destroy', card, :confirm => 'Are you sure?', :method => :delete %></td>
